--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body{
 
 #header{
     text-align: center;
-    margin-top: 5%;
-    max-height : 10%;
+    margin-top: 3%;
+    max-height : 5%;
 }
 .container-fluid{
     max-width: 80%;
@@ -22,6 +22,19 @@ section{
 }
 
 figure{
+    position:relative;
+}
+figure h2{
+    position: absolute;
+    font-size: 3em;
+    margin: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding-bottom: 34%;
+}
+.name{
+    position:absolute;
 }
 
 .row img {
