--- a/frontEnd/frontPage/styles.scss
+++ b/frontEnd/frontPage/styles.scss
@@ -1,3 +1,4 @@
+$orange: #f36100;
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
@@ -34,11 +35,11 @@ body{
     margin-top: 3%;
     font-size: 200%;
     max-height: 5%;
-    color: #f36100;
+    color: $orange;
 }
 
 /* this ensure the container is never
-   larger than 80% of the screen */
+   larger than 90% of the screen */
 .container-fluid{
     max-width: 90%;
 }
