--- a/frontEnd/shoppingList/css/app.scss
+++ b/frontEnd/shoppingList/css/app.scss
@@ -16,11 +16,12 @@ html,body{
   max-width:100%;
 }
 
- #todoapp #header h1{
-   margin-top: 70px;
+#todoapp #header h1{
+  margin-top: 70px;
   color: $orange;
-   opacity: .8;
-   font-size:50px;
+  opacity: .8;
+  font-size:50px;
+  font-weight: 100;
 }
 
 #Shopping{
