--- a/frontEnd/shoppingList/css/app.css
+++ b/frontEnd/shoppingList/css/app.css
@@ -11,7 +11,8 @@ html, body {
   margin-top: 70px;
   color: #f36100;
   opacity: .8;
-  font-size: 50px; }
+  font-size: 50px;
+  font-weight: 100; }
 
 #Shopping {
   margin: 5px; }
