--- a/frontEnd/Jen/assets/css/style.css
+++ b/frontEnd/Jen/assets/css/style.css
@@ -12,6 +12,22 @@ form {
     display:inline-block;
 }
 
+.input {
+    border: 1px solid #c4c4c4;
+    height: 25px;
+    width: 275px;
+    font-size: 13px;
+    padding: 4px 4px 4px 4px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 0px 0px 8px #d9d9d9;
+    -moz-box-shadow: 0px 0px 8px #d9d9d9;
+    -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+    color: rgba(92, 46, 28, 0.78);
+    margin: auto;
+}
+
 #button{
     display:inline-block;
     height:27px;
@@ -83,20 +99,34 @@ form {
 */
 .item {
     /*background-color:orange;*/
-    color: #211300;
+   /* color: #211300;
     font-weight: bold;
     font-size: 20px;
     margin:10px 10px 10px 10px;
     text-align:center;
     height: 30px;
     padding: 5px 5px 5px 5px;
-    border-bottom: dotted #211300 2px;
+    border-bottom: dotted #211300 2px; */
+
+    border: 1px solid #c4c4c4;
+    height: 25px;
+    width: 275px;
+    font-size: 13px;
+    padding: 4px 4px 4px 4px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 0px 0px 8px #d9d9d9;
+    -moz-box-shadow: 0px 0px 8px #d9d9d9;
+    -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+    color: rgba(92, 46, 28, 0.78);
+    margin: auto;
 }
 
-.item:hover {
+/*.item:hover {
     color: rgba(92, 46, 28, 0.78);
 }
-
+*/
 body{
     text-align: center;
     position: relative;
