--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,6 +1,6 @@
 
 
-
+$fetchOrange: #f36100;
 
 
 @font-face {
@@ -36,6 +36,22 @@ body{
   max-height: 5%;
   color: #f36100;
 }
+
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+  color: grey;
+
+  :hover{
+    color: $fetchOrange;
+  }
+}
+
+
 
 /* this ensure the container is never
    larger than 80% of the screen */
