--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -21,7 +21,7 @@ $fetchOrange: #f36100;
 body{
   font-family: sans-serif;
   padding-top: 100px;
-  overflow: hidden;
+  //overflow: hidden;
   line-height: 0.4em;
   background-color: #ffffff;
   max-width: 100%;
