--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -30,14 +30,19 @@
     }
   }
 
-  body {
-    font-family: sans-serif;
-    line-height: 0.4em;
-    padding-top: 100px;
-    background-color: #ffffff;
-    max-width: 100%;
+  //body {
+  //  font-family: sans-serif;
+  //  line-height: 0.4em;
+  //  padding-top: 100px;
+  //  background-color: #ffffff;
+  //  max-width: 100%;
+  //
+  //}
 
-  }
+  button{
+    background-color: #ffffff;
+    border:none;
+  };
 
   /* this ensure the container is never
      larger than 90% of the screen */
@@ -167,181 +172,4 @@
     border-top: 1px solid #e6e6e6;
   }
 
-  .Shopping {
-    margin: 5px;
-  }
-
-  .ShoppingList {
-    width: 70%;
-    //this will center
-    margin-left: 15%;
-  }
-  #footer {
-    height: 60px;
-  }
-
-  // PAGES
-  #shopper {
-  }
-
-  .hidden {
-    display: none;
-  }
-
-  //TODO LIST
-
-  .todo-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-
-  .todo-list li {
-    position: relative;
-    font-size: 24px;
-    border-bottom: 1px solid #ededed;
-  }
-
-  .todo-list li:last-child {
-    border-bottom: none;
-  }
-
-  .todo-list li.editing {
-    border-bottom: none;
-    padding: 0;
-  }
-
-  .todo-list li.editing .edit {
-    display: block;
-    width: 506px;
-    padding: 13px 17px 12px 17px;
-    margin: 0 0 0 43px;
-  }
-
-  .todo-list li.editing .view {
-    display: none;
-  }
-
-  .todo-list li .toggle {
-    text-align: center;
-    width: 40px;
-    /* auto, since non-WebKit browsers doesn't support input styling */
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    border: none; /* Mobile Safari */
-    -webkit-appearance: none;
-    appearance: none;
-  }
-
-  .todo-list li .toggle:after {
-    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
-  }
-
-  .todo-list li .toggle:checked:after {
-    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
-  }
-
-  .todo-list li label {
-    white-space: pre-line;
-    word-break: break-all;
-    padding: 15px 60px 15px 15px;
-    margin-left: 45px;
-    display: block;
-    line-height: 1.2;
-    transition: color 0.4s;
-  }
-
-  .todo-list li.completed label {
-    color: #d9d9d9;
-    text-decoration: line-through;
-  }
-
-  .todo-list li .destroy {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 10px;
-    bottom: 0;
-    width: 40px;
-    height: 40px;
-    margin: auto 0;
-    font-size: 30px;
-    color: #cc9a9a;
-    margin-bottom: 11px;
-    transition: color 0.2s ease-out;
-  }
-
-  .todo-list li .destroy:hover {
-    color: #af5b5e;
-  }
-
-  .todo-list li .destroy:after {
-    content: '×';
-  }
-
-  .todo-list li:hover .destroy {
-    display: block;
-  }
-
-  .todo-list li .edit {
-    display: none;
-  }
-
-  .todo-list li.editing:last-child {
-    margin-bottom: -1px;
-  }
-  .todo-count {
-    float: left;
-    text-align: left;
-  }
-
-  .todo-count strong {
-    font-weight: 300;
-  }
-
-  .filters {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    position: absolute;
-    right: 0;
-    left: 0;
-  }
-  .filters li {
-    display: inline;
-  }
-
-  .filters li a {
-    color: inherit;
-    margin: 3px;
-    padding: 3px 7px;
-    text-decoration: none;
-    border: 1px solid transparent;
-    border-radius: 3px;
-  }
-
-  .filters li a.selected,
-  .filters li a:hover {
-    border-color: rgba(175, 47, 47, 0.1);
-  }
-
-  .filters li a.selected {
-    border-color: rgba(175, 47, 47, 0.2);
-  }
-  .clear-completed,
-  html #clear-completed:active {
-    float: right;
-    position: relative;
-    line-height: 20px;
-    text-decoration: none;
-    cursor: pointer;
-    position: relative;
-  }
-
-  .clear-completed:hover {
-    text-decoration: underline;
-  }
 }
