--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -1,6 +1,15 @@
-/*
-Three font file includes max please. This includes the variations on each font other than the standard <b> and<i>.
-http://engageinteractive.co.uk/blog/how-many-fonts-is-too-many-fonts
-*/
 
+@font-face {
+  font-family: Fetch;
+  src: url(/resources/fonts/aery.ttf);
+}
 
+@font-face{
+  font-family: Glamour;
+  src:url(/resources/fonts/Glamor-BoldExtended.ttf);
+}
+
+@font-face{
+  font-family: Brandon;
+  src:url(/resources/fonts/Brandon_light.otf);
+}
