--- a/frontEnd/Jen/style.css
+++ b/frontEnd/Jen/style.css
@@ -3,27 +3,33 @@ html {
 }
 
 body {
-    text-align: center;
+    text-align: left;
     position: relative;
     justify-content: center;
     /*margin: 30px 250px 30px 250px; */
 
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: #f5f5f5;
+    background: #fff;
     color: #4d4d4d;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    font-smoothing: antialiased;
+
     font-weight: 300;
 }
 
 h1, h4 {
-     font-family:arial;
      color: #211300;
      margin:auto;
 }
 
+h1 {
+    margin-top: 3%;
+    color: #f36100;
+    opacity: .8;
+    font: 50px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    text-align: center;
+}
 
 form {
     display:inline-block;
@@ -51,10 +57,10 @@ form {
     line-height: 1.4em;
     outline: none;
     color: inherit;
-    padding: 6px;
+    padding: 6px 6px 6px 15px;
     -webkit-font-smoothing: antialiased;
 
-    text-align: center;
+    text-align: left;
     border: none;
     background: #fff;
     margin: auto;
@@ -75,6 +81,36 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+.todo-footer{
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+    0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    width: 69%;
+    padding: 5px;
+    text-align: left;
+    border-top: 1px solid #ededed;
+}
+
+.todo-footer span{
+    display: inline-block;
+}
+
+#sub-div {
+    text-align: center;
+}
+
+#item-div {
+    float: left;
+    width: 33%;
+}
+
+#placehodler {
+    float: right;
+    width: 33%;
 }
 
 #button{
@@ -104,7 +140,6 @@ button:focus {
     height:43px;
     width:150px;
     background-color: #211300;
-    font-family:arial;
     font-weight:bold;
     color:#ffffff;
     text-align:center;
@@ -138,10 +173,10 @@ button:focus {
     background: #fff;
     margin: auto;
     position: relative;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-    0 25px 50px 0 rgba(0, 0, 0, 0.1);
-    width: 60%;
-    text-align: center;
+    width: 70%;
+    text-align: left;
+    margin-top: 5%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 /*#list::-webkit-scrollbar {
@@ -186,11 +221,13 @@ button:focus {
     position: relative;
     font-size: 24px;
     border-top: 1px solid #ededed;
+    font-weight: bold;
     width: 100%;
+    line-height: 2;
 }
 
 .item:hover {
-    background-color: #FFAEAE;
+    background-color: rgba(255, 174, 174, 0.34);
 }
 
 /*arrow
@@ -201,7 +238,7 @@ button:focus {
     visibility: hidden;
 }
 */
-/* notes */
+/* notes */ /*
 .notes, .time {
     border: 3px inset rgba(33, 19, 0, 0.78);
     outline:0;
@@ -219,7 +256,7 @@ button:focus {
 }
 
 /*dialog box*/
-
+/*
 *, *:after, *:before {
     box-sizing: border-box;
     margin: 0;
