--- a/frontEnd/Jen/style.css
+++ b/frontEnd/Jen/style.css
@@ -7,13 +7,11 @@ body {
     position: relative;
     justify-content: center;
     /*margin: 30px 250px 30px 250px; */
-
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background: #fff;
     color: #4d4d4d;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
-
     font-weight: 300;
 }
 
@@ -32,43 +30,22 @@ h1 {
 }
 
 form {
-    display:inline-block;
+    margin-bottom: 0;
 }
 
 .input {
-    /*   border: 1px solid #c4c4c4;
-       height: 25px;
-       width: 275px;
-       font-size: 13px;
-       padding: 4px 4px 4px 4px;
-       border-radius: 4px;
-       -moz-border-radius: 4px;
-       -webkit-border-radius: 4px;
-       box-shadow: 0px 0px 8px #d9d9d9;
-       -moz-box-shadow: 0px 0px 8px #d9d9d9;
-       -webkit-box-shadow: 0px 0px 8px #d9d9d9;
-       color: rgba(92, 46, 28, 0.78);
-       margin: auto;
-   */
     position: relative;
     font-size: 24px;
     font-family: inherit;
     font-weight: inherit;
-    line-height: 1.4em;
     outline: none;
     color: inherit;
-    padding: 6px 6px 6px 15px;
     -webkit-font-smoothing: antialiased;
-
     text-align: left;
     border: none;
     background: #fff;
-    margin: auto;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-    0 25px 50px 0 rgba(0, 0, 0, 0.1);
-    box-sizing:border-box;
-    -moz-box-sizing:border-box;
     width: 100%;
+    line-height: 2;
 }
 
 span {
@@ -86,13 +63,34 @@ button:focus {
 .todo-footer{
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    margin: auto;
+    text-align: left;
+    border: 1px solid #ededed;
+    padding: 8px;
+    background: #fff;
+    line-height: 2;
+}
+
+.footer2 {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+    0 25px 50px 0 rgba(0, 0, 0, 0.1);
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5%;
     width: 69%;
-    padding: 5px;
     text-align: left;
-    border-top: 1px solid #ededed;
+    border: 1px solid #ededed;
+    padding: 4px;
+}
+
+.footer3{
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+    0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    width: 68%;
+    text-align: left;
+    border: 1px solid #ededed;
+    padding: 3px;
 }
 
 .todo-footer span{
@@ -101,123 +99,51 @@ button:focus {
 
 #sub-div {
     text-align: center;
+    display: inline;
+    width: 33%
 }
 
-#item-div {
+#sub {
+    text-align: center;
+    width: 33%;
+}
+
+a {
+    color: #f36100;
+}
+
+#item {
     float: left;
     width: 33%;
+    display: inline;
+
 }
 
-#placehodler {
+#placeholder {
     float: right;
     width: 33%;
-}
+    display: inline;
 
-#button{
-    display:inline-block;
-    height:27px;
-    width:70px;
-    background-color: #211300;
-    font-family:arial;
-    font-weight:bold;
-    color:#ffffff;
-    text-align:center;
-    margin: 10px 5px 5px 5px;
-    font-size: 20px;
-}
-
-#button:active {
-    background-color: rgba(33, 19, 0, 0.79);
-    color: #ffffff;
-}
-
-#button:hover {
-    opacity: 0.75;
-}
-
-#submit{
-    display:inline-block;
-    height:43px;
-    width:150px;
-    background-color: #211300;
-    font-weight:bold;
-    color:#ffffff;
-    text-align:center;
-    margin: 5px 5px 5px 5px;
-    font-size: 36px;
-}
-
-#submit:active {
-    background-color: #211300;
-    color: #ffffff;
-}
-
-#submit:hover {
-    opacity: 0.75;
 }
 
 #list {
-  /*  margin-top: 20px;
-    font-family:garamond;
-    color:#ffffff;
-    font-weight: bold;
-    list-style: none;
-    position: relative;
-    height: 300px;
-    overflow-y: scroll;
-    */
-/*    margin-right: 220px;
-    margin-left: 220px; */
-
     list-style: none;
     background: #fff;
-    margin: auto;
     position: relative;
-    width: 70%;
     text-align: left;
-    margin-top: 5%;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    margin: 5% auto auto;
+    text-indent: 7%;
 }
 
-/*#list::-webkit-scrollbar {
-    width: 12px;
-}
-/*
-#list::-webkit-scrollbar-track {
-   -webkit-box-shadow: inset 0 0 6px darkseagreen;
+#box {
+    margin: auto;
+    text-align: center;
+    width: 70%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+    0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
-#list::-webkit-scrollbar-thumb {
-   background: gray;
-}
-*/
 .item {
-    /*background-color:orange;*/
-
-    /*color: #211300;
-    font-weight: bold;
-    font-size: 20px;
-    margin:10px 10px 10px 10px;
-    text-align:center;
-    height: 30px;
-    padding: 5px 5px 5px 5px;
-    border-bottom: dotted #211300 2px;
-    */
-/*
-    border: 1px solid #c4c4c4;
-    height: 25px;
-    width: 275px;
-    font-size: 13px;
-    padding: 4px 4px 4px 4px;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    box-shadow: 0px 0px 8px #d9d9d9;
-    -moz-box-shadow: 0px 0px 8px #d9d9d9;
-    -webkit-box-shadow: 0px 0px 8px #d9d9d9;
-    color: rgba(92, 46, 28, 0.78);
-    margin: auto;*/
-
     position: relative;
     font-size: 24px;
     border-top: 1px solid #ededed;
@@ -228,101 +154,4 @@ button:focus {
 
 .item:hover {
     background-color: rgba(255, 174, 174, 0.34);
-}
-
-/*arrow
-#arrow {
-    font-size: 15px;
-    text-align: center;
-    color: #211300;
-    visibility: hidden;
-}
-*/
-/* notes */ /*
-.notes, .time {
-    border: 3px inset rgba(33, 19, 0, 0.78);
-    outline:0;
-    height:30px;
-    width: 275px;
-    color: #000000;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-
-
-#list:hover + #arrow {
-    visibility: visible;
-}
-
-/*dialog box*/
-/*
-*, *:after, *:before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-@keyframes fade {
-    from {
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(0.8);
-    }
-    to {
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
-    }
-}
-.confirm {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    min-width: 280px;
-    max-width: 500px;
-    height: auto;
-    background: rgba(57, 18, 19, 0.42);
-    padding: 0;
-    margin: 0;
-    border-top: 1px solid white;
-    animation: fade 1s ease 1 forwards;
-}
-.confirm h1 {
-    text-align: center;
-    font-size: 1.2rem;
-    margin: 1.5rem 1rem 0.5rem;
-}
-.confirm p {
-    text-align: center;
-    font-size: 1rem;
-    margin: 0 2rem 4.5rem;
-}
-.confirm button {
-    background: transparent;
-    border: none;
-    color: #ffffff;
-    height: 3rem;
-    font-size: 1rem;
-    width: 50%;
-    position: absolute;
-    bottom: 0;
-    cursor: pointer;
-}
-.confirm button:nth-of-type(1) {
-    border-top: 1px solid rgba(57, 18, 19, 0.42);
-    border-right: 1px solid rgba(57, 18, 19, 0.42);
-    left: 0;
-}
-.confirm button:nth-of-type(2) {
-    border-top: 1px solid rgba(57, 18, 19, 0.42);
-    right: 0;
-}
-.confirm button:focus,
-.confirm button:hover {
-    font-weight: bold;
-    background: rgba(57, 18, 19, 0.34);
-}
-.confirm button:active {
-    background: rgba(57, 18, 19, 0.42);
 }
