--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -1,34 +1,34 @@
 
 #homePage {
-
-  @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="col-"] {
-      width: 100%;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .container {
-      width: 100%;
-    }
-  }
-
-  @media (min-width: 1200px) {
-    .container {
-      width: 100%;
-    }
-  }
-  @media (min-width: 992px) {
-    .container {
-      width: 100%;
-    }
-  }
-  @media (min-width: 768px) {
-    .container {
-      width: 100%;
-    }
-  }
+  //
+  //@media only screen and (max-width: 768px) {
+  //  /* For mobile phones: */
+  //  [class*="col-"] {
+  //    width: 100%;
+  //  }
+  //}
+  //
+  //@media (min-width: 768px) {
+  //  .container {
+  //    width: 100%;
+  //  }
+  //}
+  //
+  //@media (min-width: 1200px) {
+  //  .container {
+  //    width: 100%;
+  //  }
+  //}
+  //@media (min-width: 992px) {
+  //  .container {
+  //    width: 100%;
+  //  }
+  //}
+  //@media (min-width: 768px) {
+  //  .container {
+  //    width: 100%;
+  //  }
+  //}
 
   //body {
   //  font-family: sans-serif;
@@ -47,13 +47,13 @@
   /* this ensure the container is never
      larger than 90% of the screen */
   .container-fluid {
-    max-width: 80%;
+    //max-width: 80%;
   }
 
-  .row {
-    margin-left: 10%;
-    margin-right: 10%;
-  }
+  //.row {
+  //  margin-left: 10%;
+  //  margin-right: 10%;
+  //}
 
   /* needed to overwrite bootstraps margins*/
   h2 {
