--- a/css/style.css
+++ b/css/style.css
@@ -561,4 +561,296 @@ ex.
     position: relative;
     margin: 0; }
 
+.state-icon {
+  left: -5px; }
+
+button {
+  background-color: white !important;
+  border: none !important;
+  padding: 10px !important;
+  color: orangered !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: 100%;
+  display: table-cell; }
+
+button.selected {
+  color: gainsboro !important;
+  border-bottom: dotted gainsboro 2px !important; }
+
+h6 {
+  color: orangered !important; }
+
+h5 {
+  color: orangered !important; }
+
+h3 {
+  color: orangered !important; }
+
+ul {
+  padding: 0;
+  list-style-type: none; }
+
+li {
+  color: orangered;
+  display: inline; }
+
+#dropbtn {
+  border: none;
+  cursor: pointer;
+  align-self: center;
+  width: 100% !important; }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  width: 100% !important; }
+
+#myDropdown {
+  display: none;
+  color: orangered;
+  position: relative;
+  min-width: 100% !important;
+  overflow: auto; }
+
+.middletext {
+  vertical-align: middle; }
+
+#ready {
+  background-color: white;
+  color: orangered !important;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  padding: 0 !important; }
+
+.show {
+  display: block; }
+
+#left {
+  color: #dddddd; }
+
+.well {
+  background-color: white !important;
+  padding: 0 !important;
+  border: 0 !important; }
+
+.btn {
+  border-bottom: dotted orangered 2px !important; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /*background-color: white;*/
+  width: 100%;
+  /*display: flex;*/
+  align-items: stretch; }
+
+#buttons {
+  display: flex !important; }
+
+#buttons li {
+  float: left;
+  flex: 1 1 auto; }
+
+#R, #T, #W, #V {
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+#buttons li button.selected {
+  background-color: darkorange;
+  color: white; }
+
+h1 {
+  font-family: "Iowan Old Style" !important;
+  color: orangered !important;
+  text-align: center; }
+
+#shopping {
+  /*#list::-webkit-scrollbar {
+      width: 12px;
+  }
+  /*
+  #list::-webkit-scrollbar-track {
+     -webkit-box-shadow: inset 0 0 6px darkseagreen;
+  }
+
+  #list::-webkit-scrollbar-thumb {
+     background: gray;
+  }
+  */ }
+  #shopping html {
+    height: 100%; }
+  #shopping body {
+    text-align: left;
+    position: relative;
+    justify-content: center;
+    /*margin: 30px 250px 30px 250px; */
+    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #fff;
+    color: #4d4d4d;
+    margin: 0 auto;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 300; }
+  #shopping h1, #shopping h4 {
+    color: #211300;
+    margin: auto; }
+  #shopping h1 {
+    margin-top: 3%;
+    color: #f36100;
+    opacity: .8;
+    font: 50px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 100; }
+  #shopping form {
+    display: inline-block; }
+  #shopping .input {
+   /*   border: 1px solid #c4c4c4;
+      height: 25px;
+      width: 275px;
+      font-size: 13px;
+      padding: 4px 4px 4px 4px;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      box-shadow: 0px 0px 8px #d9d9d9;
+      -moz-box-shadow: 0px 0px 8px #d9d9d9;
+      -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+      color: rgba(92, 46, 28, 0.78);
+      margin: auto;
+  */
+    position: relative;
+    font-size: 24px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.4em;
+    outline: none;
+    color: inherit;
+    padding: 6px 6px 6px 15px;
+    -webkit-font-smoothing: antialiased;
+    text-align: left;
+    border: none;
+    background: #fff;
+    margin: auto;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%; }
+  #shopping span {
+    display: block;
+    overflow: hidden; }
+  #shopping input:focus,
+  #shopping select:focus,
+  #shopping textarea:focus,
+  #shopping button:focus {
+    outline: none; }
+  #shopping .todo-footer {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    width: 69%;
+    padding: 5px;
+    text-align: left;
+    border-top: 1px solid #ededed; }
+  #shopping .todo-footer span {
+    display: inline-block; }
+  #shopping #sub-div {
+    text-align: left; }
+  #shopping #item-div {
+    float: left;
+    width: 47%; }
+  #shopping #button {
+    display: inline-block;
+    height: 27px;
+    width: 70px;
+    background-color: #211300;
+    font-family: arial;
+    font-weight: bold;
+    color: #ffffff;
+    text-align: center;
+    margin: 10px 5px 5px 5px;
+    font-size: 20px; }
+  #shopping #button:active {
+    background-color: rgba(33, 19, 0, 0.79);
+    color: #ffffff; }
+  #shopping #button:hover {
+    opacity: 0.75; }
+  #shopping #submit {
+    display: inline-block;
+    height: 43px;
+    width: 150px;
+    background-color: #211300;
+    font-weight: bold;
+    color: #ffffff;
+    text-align: center;
+    margin: 5px 5px 5px 5px;
+    font-size: 36px; }
+  #shopping #submit:active {
+    background-color: #211300;
+    color: #ffffff; }
+  #shopping #submit:hover {
+    opacity: 0.75; }
+  #shopping #list {
+    /*  margin-top: 20px;
+      font-family:garamond;
+      color:#ffffff;
+      font-weight: bold;
+      list-style: none;
+      position: relative;
+      height: 300px;
+      overflow-y: scroll;
+      */
+    /*    margin-right: 220px;
+        margin-left: 220px; */
+    list-style: none;
+    background: #fff;
+    margin: auto;
+    position: relative;
+    width: 70%;
+    text-align: left;
+    margin-top: 5%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2); }
+  #shopping .item {
+    /*background-color:orange;*/
+    /*color: #211300;
+    font-weight: bold;
+    font-size: 20px;
+    margin:10px 10px 10px 10px;
+    text-align:center;
+    height: 30px;
+    padding: 5px 5px 5px 5px;
+    border-bottom: dotted #211300 2px;
+    */
+    /*
+        border: 1px solid #c4c4c4;
+        height: 25px;
+        width: 275px;
+        font-size: 13px;
+        padding: 4px 4px 4px 4px;
+        border-radius: 4px;
+        -moz-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        box-shadow: 0px 0px 8px #d9d9d9;
+        -moz-box-shadow: 0px 0px 8px #d9d9d9;
+        -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+        color: rgba(92, 46, 28, 0.78);
+        margin: auto;*/
+    position: relative;
+    font-size: 24px;
+    border-top: 1px solid #ededed;
+    font-weight: bold;
+    width: 100%;
+    line-height: 2; }
+  #shopping .item:hover {
+    background-color: rgba(255, 174, 174, 0.34); }
+
 /*# sourceMappingURL=style.css.map */
