--- a/scss/_driverList.scss
+++ b/scss/_driverList.scss
@@ -1,87 +1,88 @@
-.state-icon {
-    left: -5px;
-}
-button {
-    background-color: white!important;
-    border: none!important;
-    padding: 10px!important;
-    color: orangered!important;
-    text-align: center!important;
-    text-decoration: none!important;
-    width: 100%;
-    display: table-cell;
-}
+#driver{
+  .state-icon {
+      left: -5px;
+  }
+  button {
+      background-color: white!important;
+      border: none!important;
+      padding: 10px!important;
+      color: orangered!important;
+      text-align: center!important;
+      text-decoration: none!important;
+      width: 100%;
+      display: table-cell;
+  }
 
-button.selected{
-    color: gainsboro!important;
-    border-bottom: dotted gainsboro 2px!important;
-}
-h6{
-    color: orangered!important;
-}
-h5{
-    color: orangered!important;
-}
-h3{
-    color: orangered!important;
-}
+  button.selected{
+      color: gainsboro!important;
+      border-bottom: dotted gainsboro 2px!important;
+  }
+  h6{
+      color: orangered!important;
+  }
+  h5{
+      color: orangered!important;
+  }
+  h3{
+      color: orangered!important;
+  }
 
-ul{
-    padding: 0;
-    list-style-type: none;
-}
+  ul{
+      padding: 0;
+      list-style-type: none;
+  }
 
-li{
-    color: orangered;
-    display: inline;
-}
+  li{
+      color: orangered;
+      display: inline;
+  }
 
-#dropbtn {
-    border: none;
-    cursor: pointer;
-    align-self: center;
-    width: 100%!important;
-}
+  #dropbtn {
+      border: none;
+      cursor: pointer;
+      align-self: center;
+      width: 100%!important;
+  }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-    width: 100%!important;;
-}
+  .dropdown {
+      position: relative;
+      display: inline-block;
+      width: 100%!important;;
+  }
 
-#myDropdown {
-    display: none;
-    color: orangered;
-    position: relative;
-    min-width: 100%!important;
-    overflow: auto;
+  #myDropdown {
+      display: none;
+      color: orangered;
+      position: relative;
+      min-width: 100%!important;
+      overflow: auto;
 
-}
+  }
 
-.middletext{
-    vertical-align: middle;
-}
+  .middletext{
+      vertical-align: middle;
+  }
 
-#ready {
-    background-color: white;
-    color: orangered!important;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    padding: 0!important;
-}
-.show {display:block;}
+  #ready {
+      background-color: white;
+      color: orangered!important;
+      border: none;
+      cursor: pointer;
+      position: relative;
+      padding: 0!important;
+  }
+  .show {display:block;}
 
-#left{
-    color: #dddddd;
-}
+  #left{
+      color: #dddddd;
+  }
 
-.well{
-    background-color: white!important;
-    padding: 0!important;
-    border: 0!important;
+  .well{
+      background-color: white!important;
+      padding: 0!important;
+      border: 0!important;
+  }
+  .btn{
+      border-bottom: dotted orangered 2px!important;
+  }
 }
-.btn{
-    border-bottom: dotted orangered 2px!important;
-}
-
