--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -178,4 +178,24 @@
     margin-top: -20px;
     text-align: right;
   }
+
+}
+h2{
+  color:green;
+}
+@media screen and(min-width: 200px){
+  .container{
+    width: 80%;
+  }
+  h2{
+    font-size: 180%;
+  }
+}
+@media screen and(min-width: 1000px){
+  .container{
+    width: 30%;
+  }
+  h2{
+    font-size: 250%;
+  }
 }
