curious part think I fixed things

--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -1,9 +1,14 @@
 
 #homePage {
+
+  margin: 15%;
+  min-width:250px;
+  margin-top:-100px;
+
   button{
     background-color: #ffffff;
     border:none;
-  }
+  };
 
   /* this ensure the container is never
      larger than 90% of the screen */
@@ -17,7 +22,14 @@
   //}
 
   /* needed to overwrite bootstraps margins*/
+  h2 {
+    margin: 0;
+  }
 
+  h1 {
+    margin: 5px 0 0 0;
+    font-size: 45px;
+  }
 
   .name {
     font-family: Brandon;
@@ -29,7 +41,7 @@
   }
 
   figure img {
-    margin: 0 0;
+    margin: 5% 0;
     border-radius: 5px;
     max-width: 100%;
   }
