--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -1,9 +1,9 @@
 
 #homePage {
 
-  //margin: 15%;
-  //min-width:250px;
-  //margin-top:-100px;
+  margin: 15%;
+  min-width:250px;
+  margin-top:-100px;
 
   button{
     background-color: #ffffff;
