Fixed all css collisions. Refactored lots of code with regards to bootstrap layout and removing unnecessary custom css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,9 +2,10 @@
 @import "variables_mixins";
 @import "font";
 
-@import "signUp";
+@import "defaults";
+
+@import "menuDrawer";
 @import "template";
-@import "login";
 @import "rating";
 @import "homePage";
 @import "driverList";
