--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -4,19 +4,19 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        /*background-color: white;*/
         width: 100%;
-        /*display: flex;*/
         align-items: stretch;
     }
 
     #buttons {
         display: flex !important;
+
     }
 
     #buttons li {
         float: left;
         flex: 1 1 auto;
+        flex-basis: 25%;
     }
 
     #R, #T, #W, #V {
