--- a/scss/_menuDrawer.scss
+++ b/scss/_menuDrawer.scss
@@ -157,18 +157,6 @@
   transition: top 0.3s 0.3s;
 }
 
-@media only screen and (min-width: 768px) {
-  .cd-panel-header {
-    width: 75%;
-  }
-
-}
-
-@media only screen and (min-width: 1170px) {
-  .cd-panel-header {
-    width: 50%;
-  }
-}
 
 .cd-panel-close {
   position: absolute;
@@ -258,19 +246,38 @@
   -moz-transition-delay: 0s;
   transition-delay: 0s;
 }
-
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 200px) {
   .cd-panel-container {
     width: 90%;
   }
+  .cd-panel-content{
+    margin-top:10%;
+  }
 
 }
+@media only screen and (min-width: 600px) {
+  .cd-panel-container {
+    width: 60%;
+  }
+  .cd-panel-header{
+    width: 60%;
+  }
+  .cd-panel-content{
+    margin-top:5%;
+  }
+}
+
 
 @media only screen and (min-width: 1170px) {
   .cd-panel-container {
-    width: 50%;
+    width: 25%;
   }
-
+  .cd-panel-content{
+    margin-top:15%;
+  }
+  .cd-panel-header{
+    width:25%;
+  }
 }
 
 .cd-panel-content {
@@ -278,9 +285,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  padding: 0px;
-  overflow: auto;
+
+
+  overflow: hidden;
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch;
 }
