fix tickets and driverList

--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -36,10 +36,10 @@
 //        color: white;
 //    }
 //
-.selected{
-    background-color: darkorange;
-    color: white;
-}
+//.selected{
+//    background-color: darkorange;
+//    color: white;
+//}
 .hidden{
     display: none;
 }
